Issue #1921502 by Zarabadoo: Crossbrowser type spacing fixes.

--- a/commons-thumbs-up-down.scss
+++ b/commons-thumbs-up-down.scss
@@ -3,7 +3,6 @@
 $arrow-width: 1em;
 
 .rate-widget-commons_thumbs_up_down {
-  clear: both;
   width: 4.5em;
   margin: 1.7em 0;
 }
@@ -11,10 +10,10 @@ $arrow-width: 1em;
 .rate-info {
   position: relative;
   width: 100%;
-  height: 4.5em;
+  height: 3.5em;
   @include box-sizing(border-box);
   margin-bottom: .4em;
-  padding: .5em 1em;
+  padding: .1em .4em;
   border: 1px solid #ccc;
   @include border-radius(.3em);
   font-size: .8em;
@@ -50,17 +49,19 @@ $arrow-width: 1em;
 
 .rate-info-value {
   display: block;
-  font-size: 2em;
+  font-size: 1.8em;
   font-weight: bold;
   line-height: 1em;
 }
 
 .rate-info-label {
   line-height: 1em;
+  color: #888;
 }
 
 .commons-q-a-rate-buttons {
   margin: 0;
+  line-height: 100%;
 }
 
 .commons-q-a-rate-trigger {
@@ -83,14 +84,12 @@ $arrow-width: 1em;
 
     &:before {
       display: block;
-      width: 1em;
-      height: 1em;
       margin: 0 auto;
       text-align: center;
-      font-weight: bold;
-      font-size: 2em;
-      line-height: .8em;
+      font-size: 2.4em;
       color: #333;
+      font-weight: bold;
+      font-family: monospace;
     }
 
     &:hover {
